Cleaned up CSS code and wrap up issue #3.

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ header {
 
 .nav-tab {
   padding-bottom: 0;
-  margin: 0 1rem 0 0;
+  margin-right: 1rem;
 }
 
 main {
@@ -35,10 +35,6 @@ h3 {
 .title-header {
   display: flex;
   justify-content: space-between;
-}
-
-.entries-header {
-  margin: 0;
 }
 
 .new-entry-button {
@@ -138,5 +134,9 @@ h4 {
 
   .entries-header {
     padding-right: 0.75rem;
+  }
+
+  .title-header {
+    margin-top: 0;
   }
 }
